# slumber

./: .gitignore  README.md
allen-dev/476lab1/libraries/: Libraries.h
allen-dev/476lab1/source/: Camera.cpp  Scene.cpp  main.cpp
allen-dev/Cmake/: CMakeCache.txt  Makefile
allen-dev/Cmake/libraries/: HUD.h  MatrixStack.h  actor.hpp
allen-dev/Cmake/mac-build/: CMakeCache.txt  cmake_install.cmake
allen-dev/Cmake/source/: .MatrixStack.cpp.swp  .assets.cpp.swp  GLSL.cpp  (+7 more)
art/: IntroText.ai  PLAY.ai  clock_tooltip.ai  doll_tooltip.ai  door_tooltip.ai  fan_tooltip.ai  ghost_hud.ai  lamp_tooltip.ai  slumber-title.ai  tv_tooltip.ai  window_tooltip.ai
audacity projects/: musicbox.aup
eclipse-workspace/.metadata/: version.ini
edgard-dev/Lighting/: CMakeCache.txt  Makefile  cmake_install.cmake  newvert.glsl
exported-objs/: enemy.mtl  lamp-table.mtl  room.mtl
kyle-dev/libraries/: BoundingSphere.h  Framebuffer.h  Libraries.h  Scene.h
kyle-dev/source/: BoundingSphere.cpp  Framebuffer.cpp  Light.cpp  Shape.cpp
lab1/Cmake/: CMakeCache.txt  Lab1  Makefile  cmake_install.cmake  frag.glsl  sources.txt  vert.glsl
lab1/linux/: actor.cpp  actor.cpp~  actor.hpp  actor.hpp~  camera.hpp  control.hpp  gamestate.cpp  gamestate.hpp  gamestate.hpp~  main.cpp  main.cpp~  windowsetup.cpp  windowsetup.cpp~
lab1/mac/: .cproject  CMakeCache.txt  cmake_install.cmake  sources.txt
lab1/mac-client/: CMakeCache.txt  Makefile  cmake_install.cmake  slumber.py?=0  slumber.py?=0.1  slumber.py?=0.10  slumber.py?=0.11  slumber.py?=0.12  slumber.py?=0.13  slumber.py?=0.14  slumber.py?=0.15  slumber.py?=0.16  slumber.py?=0.17  slumber.py?=0.18  slumber.py?=0.19  slumber.py?=0.2  slumber.py?=0.20  slumber.py?=0.21  slumber.py?=0.21.1  slumber.py?=0.21.10  slumber.py?=0.21.11  slumber.py?=0.21.13  slumber.py?=0.21.14  slumber.py?=0.21.2  slumber.py?=0.21.3  slumber.py?=0.21.4  slumber.py?=0.21.5  slumber.py?=0.21.6  slumber.py?=0.21.7  slumber.py?=0.21.8  slumber.py?=0.21.9  slumber.py?=0.22  slumber.py?=0.22.1  slumber.py?=0.22.11  slumber.py?=0.22.13  slumber.py?=0.22.14  slumber.py?=0.22.17  slumber.py?=0.22.3  slumber.py?=0.22.4  slumber.py?=0.22.5  (+478 more)
main/: .nfs0000000001da153500000046  CMakeCache.txt  CMakeLists.txt  Lab1  Lighting_Frag.glsl  Lighting_Vert.glsl  Makefile  cmake_install.cmake  do_build.sh  frag.glsl  sources.txt
main/Debug/: FBO_Frag_Darken.glsl  Lighting_Frag.glsl
main/built/: CMakeCache.txt  cmake_install.cmake
main/built/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelWithDebInfo  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeDebug
main/built/Debug/: Lab1  vert.glsl
main/built/Lab1.build/Debug/ALL_BUILD.build/: Script-E1359CB2AA55495EB75F3033.sh  dgph
main/built/Lab1.build/Debug/Lab1.build/Objects-normal/x86_64/: Lab1.LinkFileList  actor.dia  assets.dia  main.dia
main/built/Lab1.build/Debug/Lab1.build/StaticAnalyzer/Lab1/Lab1/normal/x86_64/: tiny_obj_loader.d  tiny_obj_loader.plist  util.d
main/built/Lab1.build/Debug/ZERO_CHECK.build/: dgph
main/built/Lab1.xcodeproj/: project.pbxproj
main/built/Lab1.xcodeproj/project.xcworkspace/xcshareddata/: Lab1.xccheckout
main/built/Lab1.xcodeproj/project.xcworkspace/xcuserdata/elliotfiske.xcuserdatad/: UserInterfaceState.xcuserstate
main/built/Lab1.xcodeproj/xcuserdata/elliotfiske.xcuserdatad/xcschemes/: ALL_BUILD.xcscheme  Lab1.xcscheme  glfw.xcscheme
main/built/dependencies/glfw/: cmake_install.cmake
main/built/dependencies/glfw/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelease  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeMinSizeRel
main/built/dependencies/glfw/GLFW.xcodeproj/: project.pbxproj
main/built/dependencies/glfw/src/Lab1.build/Debug/glfw.build/: dgph
main/built/dependencies/glfw/src/Lab1.build/Debug/glfw.build/Objects-normal/x86_64/: cocoa_monitor.dia  glfw3.LinkFileList
main/built/dependencies/glfw/src/Lab1.build/Debug/glfw.build/StaticAnalyzer/Lab1/glfw/normal/x86_64/: iokit_joystick.d
main/dependencies/SFML-2.3-osx/templates/SFML/SFML App.xctemplate/: TemplateInfo.plist
main/dependencies/glfw/src/: init.c
main/resources/: BillBoard_Frag.glsl  Billboard_Frag save'd.glsl  Billboard_Frag.glsl  Billboard_Vert.glsl  Collectible_Frag.glsl  Collectible_Vert lol.glsl  Collectible_Vert.glsl  FBO_Frag_Darken.glsl  FBO_Frag_Ghost_Vision.glsl  FBO_Frag_Motion_Blur.glsl  FBO_Frag_Woozy.glsl  FBO_Vert.glsl  HUD_Frag.glsl  HUD_Vert.glsl  Lighting_Frag.glsl  Lighting_Frag_Ghost.glsl  Lighting_PCSS_Frag.glsl  Lighting_PCSS_Frag_Ghost.glsl  Lighting_Vert.glsl  ReflectShader.cpp  Reflection_Frag.glsl  Reflection_Vert.glsl  WobblyTexture.glsl  billboards.txt  level.txt  simple_vert.glsl  unchangedlvl.txt
main/resources/models/: bed.mtl  chair.mtl  clock-pendulum.mtl  clock.mtl  doll.mtl  door.mtl  fan.mtl  lamp-table.mtl  mirror.mtl  nigthstand.mtl  plane.mtl  room.mtl  tv.mtl
main/resources/sounds/: creak.m4a  musicbox.flac
main/source/: .assets.hpp.swp  BillboardActor.cpp  BillboardActor.h  BoundingBox.cpp  BoundingBox.hpp  BoundingSphere.cpp  BoundingSphere.hpp  Framebuffer.cpp  Framebuffer.h  GLSL.cpp  GLSL.h  GhostState.cpp  GhostState.h  HUDElement.cpp  HUDElement.h  Light.cpp  Light.h  Octree.cpp  Octree.hpp  ParalyzedState.cpp  ParalyzedState.h  Plane.cpp  Plane.hpp  Texture.cpp  Texture.h  ViewFrustum.cpp  ViewFrustum.hpp  actor.cpp  actor.hpp  assets.cpp  assets.hpp  camera.cpp  camera.hpp  collectible.cpp  collectible.h  control.cpp  control.hpp  gamestate.cpp  gamestate.hpp  main.cpp  (+11 more)
main/source/shaders/: BillboardShader.cpp  BillboardShader.h  FBOShader.cpp  FBOShader.h  Framebuffer.cpp  Framebuffer.h  HUDShader.cpp  HUDShader.h  LightingShader.cpp  LightingShader.h  ReflectShader.cpp  ReflectShader.h  ShadowShader.cpp  ShadowShader.h  SimpleShader.cpp  SimpleShader.h  shader.cpp  shader.h
noah-dev/: dummy_file.txt
pitch/: index.html
(+329 files in other folders)
